force-app/main/default/objects/Krow__Resource_Utilization__c/Krow__Resource_Utilization__c.object-meta.xml
<CustomObject>
    <label>Resource Utilization</label>
    <nameField>
        <displayFormat>RU{00000000}</displayFormat>
        <label>Resource Utilization Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resource Utilization</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>