force-app/main/default/objects/Krow__Resource_Utilization__c/fields/Krow__Billable_Scheduled_Hours__c.field-meta.xml
<CustomField>
    <fullName>Krow__Billable_Scheduled_Hours__c</fullName>
    <description>Total of Task assignment schedule hours related to the billable task.</description>
    <inlineHelpText>Total of Task assignment schedule hours related to the billable task.</inlineHelpText>
    <label>Billable Scheduled Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>