force-app/main/default/objects/Krow__Resource_Utilization__c/fields/Krow__Non_Billable_Utilization__c.field-meta.xml
<CustomField>
    <fullName>Krow__Non_Billable_Utilization__c</fullName>
    <formula>IF(OR(ISBLANK(Krow__Work_Week_Hours__c), IF(Krow__Work_Week_Hours__c = 0, TRUE, FALSE)), 0, (Krow__Non_Billable_Hours__c /  (Krow__Work_Week_Hours__c * Krow__Target_Utilization__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Non Billable Utilization</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>