force-app/main/default/objects/Krow__Resource_Utilization__c/fields/Krow__Pipeline_Hours_Planned__c.field-meta.xml
<CustomField>
    <fullName>Krow__Pipeline_Hours_Planned__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Pipeline Hours (Planned)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>