force-app/main/default/objects/Krow__Resource_Utilization__c/fields/Krow__Pipeline_Hours_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>Krow__Pipeline_Hours_Scheduled__c</fullName>
    <label>Pipeline Hours (Scheduled)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>