force-app/main/default/objects/Krow__Resource_Utilization__c/fields/Krow__Planned_Availability__c.field-meta.xml
<CustomField>
    <fullName>Krow__Planned_Availability__c</fullName>
    <description>Work Week Hours - Project Planned Hours</description>
    <formula>Krow__Work_Week_Hours__c - Krow__Planned_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Planned Availability</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>