force-app/main/default/objects/Krow__Resource_Utilization__c/fields/Krow__Planned_Utilization_Inc_Pipeline__c.field-meta.xml
<CustomField>
    <fullName>Krow__Planned_Utilization_Inc_Pipeline__c</fullName>
    <formula>IF( 
OR( 
ISBLANK(Krow__Work_Week_Hours__c), 
IF( 
Krow__Work_Week_Hours__c = 0, TRUE, FALSE 
) 
), 0, 
( 
((Krow__Planned_Hours__c-  Krow__Pipeline_Hours_Planned__c ) + IF( Krow__Project_Resource__r.Krow__Placeholder__c = TRUE,Krow__Work_Week_Hours__c,0)) 
/ (Krow__Work_Week_Hours__c * Krow__Target_Utilization__c)) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Planned Utilization % - w/o Pipeline</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>