force-app/main/default/objects/Krow__Resource_Utilization__c/fields/Krow__Project_Resource__c.field-meta.xml
<CustomField>
    <fullName>Krow__Project_Resource__c</fullName>
    <label>Project Resource</label>
    <referenceTo>Krow__Project_Resources__c</referenceTo>
    <relationshipLabel>Resource Utilization</relationshipLabel>
    <relationshipName>Resource_Utilization</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>