force-app/main/default/objects/Krow__Resource_Utilization__c/fields/Krow__Resource_Role__c.field-meta.xml
<CustomField>
    <fullName>Krow__Resource_Role__c</fullName>
    <formula>Krow__Project_Resource__r.Krow__Project_Role__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Resource Role</label>
    <type>Text</type>
</CustomField>