force-app/main/default/objects/Krow__Resource_Utilization__c/fields/Krow__Schedule_Availability__c.field-meta.xml
<CustomField>
    <fullName>Krow__Schedule_Availability__c</fullName>
    <description>Work Week Hours - Task Scheduled Hours</description>
    <formula>Krow__Work_Week_Hours__c -  Krow__Scheduled_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Schedule Availability</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>