force-app/main/default/objects/Krow__Resource_Utilization__c/fields/Krow__Scheduled_Hours__c.field-meta.xml
<CustomField>
    <fullName>Krow__Scheduled_Hours__c</fullName>
    <description>Schedule hour on resource&apos;s task assignment</description>
    <label>Scheduled Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>