force-app/main/default/objects/Krow__Resource_Utilization__c/fields/Krow__Soft_Booked_Hours_Planned__c.field-meta.xml
<CustomField>
    <fullName>Krow__Soft_Booked_Hours_Planned__c</fullName>
    <description>Calculated from the project assignment schedules for which project assignment status is &apos;Soft Booked&apos;.</description>
    <label>Soft Booked Hours (Planned)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>