force-app/main/default/objects/Krow__Resource_Utilization__c/fields/Krow__Soft_Booked_Hours_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>Krow__Soft_Booked_Hours_Scheduled__c</fullName>
    <description>Calculated from the task scheduled which are matching the same roles with the project assignment which has the &apos;Soft Booked&apos; status.</description>
    <label>Soft Booked Hours (Scheduled)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>