force-app/main/default/objects/Krow__Resource_Utilization__c/fields/Krow__Time_off_Hours__c.field-meta.xml
<CustomField>
    <fullName>Krow__Time_off_Hours__c</fullName>
    <description>Time-off hours during a week</description>
    <label>Time-off Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>