force-app/main/default/objects/Krow__Resource_Utilization__c/fields/Krow__Total_Hours__c.field-meta.xml
<CustomField>
    <fullName>Krow__Total_Hours__c</fullName>
    <description>Sum of billable and non billable hours</description>
    <formula>Krow__Billable_Hours__c + Krow__Non_Billable_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>