force-app/main/default/objects/Krow__Resource_Utilization__c/fields/Krow__Utilization__c.field-meta.xml
<CustomField>
    <fullName>Krow__Utilization__c</fullName>
    <formula>IF(OR(OR(ISBLANK(Krow__Work_Week_Hours__c), ISBLANK(Krow__Target_Utilization__c)), 
OR(IF(Krow__Work_Week_Hours__c = 0, TRUE, FALSE), IF(Krow__Target_Utilization__c = 0, TRUE, FALSE))), 0, (Krow__Total_Hours__c / (Krow__Work_Week_Hours__c * Krow__Target_Utilization__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Utilization %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>