force-app/main/default/objects/Krow__Resource_Utilization__c/fields/Krow__Work_Week_Hours__c.field-meta.xml
<CustomField>
    <fullName>Krow__Work_Week_Hours__c</fullName>
    <description>Total of all days hours of resource&apos;s work-schedule.</description>
    <label>Work Week Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>