force-app/main/default/objects/Krow__Resource_Utilization__c/listViews/Krow__All_Utilization.listView-meta.xml
<ListView>
    <fullName>Krow__All_Utilization</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Krow__Project_Resource__c</columns>
    <columns>Krow__Project__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>